--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
             - type: bind
               source: ./data
               target: /data
+        environment:
+            DATA_DIR: /data
 volumes:
     data:
