moved .zip data into a data dir.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 .RData
 .Ruserdata
 UC Timeliness - 2007 to present.xls
-data/
+data/*
+!data/UI Data 1-2017.zip
+!data/cb_2015_us_state_20m.zip
 restart.txt
 *~
 *.swp
