--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -1,5 +1,5 @@
 name: Build docker image to download unemployment data
-on: [push]
+on: [workflow_dispatch]
 env:
   IMAGE_NAME: uidatadownloader
 jobs:
