--- a/.github/workflows/deployshinyioFromRelease.yml
+++ b/.github/workflows/deployshinyioFromRelease.yml
@@ -6,6 +6,7 @@ name: Deploy ui-explorer to shinyapps.io using the Released verion of the feathe
 on: [push] # when complete, run this when the 'release data' workflow completes,  https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
 jobs:
   build:
+    runs-on: ubuntu-latest
     name: Deploy ui-explorer to shinyapps.io using Released version of data.
     steps:
       - name: Setup repository
