--- a/.github/workflows/deployshinyio.yml
+++ b/.github/workflows/deployshinyio.yml
@@ -10,7 +10,7 @@ jobs:
     name: Deploy ui-explorer to shinyapps.io
     steps:
       - name: Setup repository
-        uses: actions/checkout:v2
+        uses: actions/checkout@v2
       - name: Build docker image
         run: docker build . --tag $IMAGE_NAME
       - name: Run docker with CMD set to run the script that deploys the app.
