--- a/.github/workflows/deployshinyio.yml
+++ b/.github/workflows/deployshinyio.yml
@@ -4,6 +4,8 @@
 #   processes the data. )
 name: Deploy ui-explorer to shinyapps.io
 on: [workflow_dispatch] # when complete, run this when the 'release data' workflow completes,  https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
+env:
+  IMAGE_NAME: uidatadownloader
 jobs:
   build:
     runs-on: ubuntu-latest
