remove IMAGE_NAME var from compose services that don't need them.

--- a/.github/workflows/deployshinyioFromRelease.yml
+++ b/.github/workflows/deployshinyioFromRelease.yml
@@ -26,4 +26,5 @@ jobs:
           SHINYAPPS_SECRET: ${{secrets.SHINYAPPS_SECRET}}
           SHINYAPPS_TOKEN: ${{secrets.SHINYAPPS_TOKEN}}
           SHINYAPPS_ACCOUNT: ${{secrets.SHINYAPPS_ACCOUNT}}
-        run: docker-compose run --rm shinyappsdeploywithrelease
+        run: |
+          docker-compose run --rm shinyappsdeploywithrelease
