--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     # deploy the app to shinyapps and download and process the data.
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: DockerfileDeployShinyApps
     environment:
       DATA_DIR: /data
       PROJECT_ROOT: /Rscripts
@@ -36,7 +36,7 @@ services:
     # (this does not download the release - it assumes the release is present)
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: DockerfileDeployShinyApps
     environment:
       DATA_DIR: /data
       PROJECT_ROOT: /Rscripts
