--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -16,7 +16,7 @@ jobs:
       #     docker-compose run --rm datadownload
       - name: Delete this release
         run: |
-          curl -u $GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}  -H "Accept: application/vnd.github.v3+json"   https://api.github.com/repos/clsphila/ui-data-explorer/releases
+          curl -u $GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}  -X DELETE -H "Accept: application/vnd.github.v3+json"   https://api.github.com/repos/clsphila/ui-data-explorer/releases
       # - name: Create release
       #   id: create_release
       #   uses: actions/create-release@v1
