turns out the error with the shapefiles was about environment vars not loading properly. I'm using the 'config' library now. there's a config.yml file for non-secret configutation values, and its the library shinyapps recomments.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ rsconnect/
 .RData
 .Ruserdata
 UC Timeliness - 2007 to present.xls
-data/*
+data/**
 !data/UI Data 1-2017.zip
 !data/cb_2015_us_state_20m.zip
 !data/EUC-1982-1987-USDOLData.csv
