updated workflows to create a release of the csv data

--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -1,5 +1,9 @@
+# Workflow to build a docker image that can be used to download and process unemployment data.
+#
+# Other workflows use this image to either publish the data or to collect the data and then
+# publish the web app.
 name: Build docker image to download unemployment data
-on: [push]
+on: [workflow_dispatch]
 env:
   IMAGE_NAME: uidatadownloader
 jobs:
