--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -1,6 +1,6 @@
 # Workflow to pull the datadownload docker image, run it, and store the created data.
 name: Process unemployment data and publish
-on: [workflow_dispatch]
+on: [push]
 env:
   IMAGE_ID: clsphila/ui-data-explorer/uidatadownloader:dockerize-update-2020
   FRED_KEY: ${{secrets.FRED_KEY}}
@@ -15,5 +15,15 @@ jobs:
       - name: Download and process data
         run: |
           docker-compose run --rm datadownload
-      - name: Create release, or update if necessary.
-        run: . ./updateRelease.sh
+      - name: Create release for the parquet data, or update if necessary.
+        run: . ./updateRelease.sh clsphila ui-data-explorer \
+          uiExplorerData \
+          unemployment_data.parquet
+      - name: Zip csv data, to release it.
+        run: zip data/unemployment_data.zip data/*.csv
+      - name: Create or update release for csv data.
+        run: |
+          rm data/EUC-1982-1987-USDOLData.csv
+          . ./updateRelease.sh clsphila ui-data-explorer \
+                               uiExplorerCSV \
+                               unemployment_data.zip
