--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,6 @@
-default: 
-    DATA_DIR: "data"
-    PROJECT_ROOT: "."
+default:
+  DATA_DIR: "data"
+  PROJECT_ROOT: "."
+docker:
+  DATA_DIR: "/data"
+  PROJECT_ROOT: "/Rscripts"
