--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,7 @@ services:
       context: .
       dockerfile: DockerfileDeployShinyApps
     environment:
-      DATA_DIR: /data
-      PROJECT_ROOT: /Rscripts
+      R_CONFIG_ACTIVE: docker
       FRED_KEY: ${FRED_KEY}
       SHINYAPPS_SECRET: ${SHINYAPPS_SECRET}
       SHINYAPPS_TOKEN: ${SHINYAPPS_TOKEN}
