--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,14 @@ services:
     volumes:
       - type: bind
         source: ./data
-        target: /data
+        target: Rscripts/data
   shinyappsdeploywithrelease:
     # deploy the app to shinyapps using the github-released version of the data.
     # (this does not download the release - it assumes the release is present)
     build:
       context: .
       dockerfile: DockerfileDeployShinyApps
+    #image: $IMAGE_ID
     environment:
       R_CONFIG_ACTIVE: docker
       FRED_KEY: ${FRED_KEY}
@@ -46,6 +47,6 @@ services:
     volumes:
       - type: bind
         source: ./data
-        target: /data
+        target: Rscripts/data
 volumes:
   data:
