--- a/.github/workflows/deployshinyio.yml
+++ b/.github/workflows/deployshinyio.yml
@@ -5,6 +5,7 @@
 name: Deploy ui-explorer to shinyapps.io
 on:
   workflow_dispatch: # when complete, run this when the 'release data' workflow completes,  https://docs.github.com/en/actions/reference/events-that-trigger-workflows#release
+  push:
 env:
   IMAGE_NAME: uidatadownloader
 jobs:
