--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -3,7 +3,7 @@
 # Other workflows use this image to either publish the data or to collect the data and then
 # publish the web app.
 name: Build docker image to download unemployment data
-on: [workflow_dispatch,push]
+on: [workflow_dispatch]
 env:
   IMAGE_NAME: uidatadownloader
 jobs:
