--- a/.github/workflows/deployshinyioFromRelease.yml
+++ b/.github/workflows/deployshinyioFromRelease.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Download release of feather data
         run: |
-          curl -L https://github.com/CLSPhila/ui-data-explorer/releases/download/uiExplorerData/unemployment_data.parquet --output data/unemployment_data.parquet
+          curl -L https://github.com/$GITHUB_REPOSITORY/ui-data-explorer/releases/download/uiExplorerData/unemployment_data.parquet --output data/unemployment_data.parquet
       - name: Run docker with CMD set to run the script that deploys the app.
         env:
           R_CONFIG_ACTIVE: docker
