--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -5,10 +5,10 @@ on:
   # to run manually.
   schedule:
     # update data daily.
-    - cron: "0 4 * * *"
+    - cron: "0 6 * * *"
 
 env:
-  IMAGE_ID: clsphila/ui-data-explorer/uidatadownloader:dockerize-update-2020
+  IMAGE_ID: ${{GITHUB_REPOSITORY}}/uidatadownloader:dockerize-update-2020
   FRED_KEY: ${{secrets.FRED_KEY}}
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
