--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -8,7 +8,6 @@ on:
     - cron: "0 6 * * *"
 
 env:
-  IMAGE_ID: ${{$GITHUB_REPOSITORY}}/uidatadownloader:dockerize-update-2020
   FRED_KEY: ${{secrets.FRED_KEY}}
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
@@ -16,6 +15,10 @@ jobs:
     name: Download Data
     runs-on: ubuntu-latest
     steps:
+      - name: Set image id
+        run: |
+          echo "::set-env name=IMAGE_ID::$GITHUB_REPOSITORY/uidatadownloader:latest"
+          echo "IMAGE ID: $IMAGE_ID"
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download and process data
