add a sleep time variable with a default of 1 and a docket default of 2

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,8 @@
 default:
   DATA_DIR: "data"
   PROJECT_ROOT: "."
+  FRED_SLEEP_TIME: "1"
 docker:
   DATA_DIR: "/data"
   PROJECT_ROOT: "/Rscripts"
+  FRED_SLEEP_TIME: "2"
