--- a/DockerfileDeployShinyApps
+++ b/DockerfileDeployShinyApps
@@ -5,6 +5,8 @@ RUN apt update && apt install -y libjq-dev libv8-dev libgdal-dev libgeos-c1v5 li
 RUN mkdir /data
 
 COPY unemploymentDataProcessor.R app.R filemanifest.txt config.yml helper.R deployShinyApps.R /Rscripts/
+RUN mdkir /Rscripts/www
+COPY CLS-Logo_120.png /Rscripts/www
 COPY data /data/
 
 # /data should be a volume mount, where the dataprocessor will write.
