Further update to allow for www directory to be created and copied

--- a/DockerfileDeployShinyApps
+++ b/DockerfileDeployShinyApps
@@ -3,6 +3,8 @@
 FROM rocker/tidyverse
 RUN apt update && apt install -y libjq-dev libv8-dev libgdal-dev libgeos-c1v5 libproj-dev libudunits2-dev
 RUN mkdir /data
+RUN mkdir /Rscripts/data
+
 
 COPY unemploymentDataProcessor.R app.R filemanifest.txt config.yml helper.R deployShinyApps.R /Rscripts/
 COPY www /Rscripts/www/
