--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -3,9 +3,9 @@ name: Process and publish unemployment data as a parquet file and a collection o
 on:
   workflow_dispatch:
   # to run manually.
-  schedule:
-    # update data daily.
-    - cron: "0 5 * * *"
+#   schedule:
+#     # update data daily.
+#     - cron: "0 5 * * *"
   #push: 
 env:
   FRED_KEY: ${{secrets.FRED_KEY}}
