--- a/DockerfileDeployShinyApps
+++ b/DockerfileDeployShinyApps
@@ -1,6 +1,6 @@
 # This dockerfile, when run, will deploy the app to shinyapps. 
 # To do this, it needs to set up the full environment of the app. 
-FROM rocker/tidyverse
+FROM rocker/tidyverse:4.02
 RUN apt update && apt install -y libjq-dev libv8-dev libgdal-dev libgeos-c1v5 libproj-dev libudunits2-dev
 RUN mkdir /data
 
