--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -10,6 +10,7 @@ on:
 env:
   FRED_KEY: ${{secrets.FRED_KEY}}
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  UI_EXPLORER_GOOGLE_PASSWORD:  ${{secrets.UI_EXPLORER_GOOGLE_PASSWORD}} 
   IMAGE_NAME: uidatadownloader
 jobs:
   build:
