don't run workflow on schedule.
not needed for this repo, which is only for debugging TCF's production version.

--- a/.github/workflows/releasedata.yml
+++ b/.github/workflows/releasedata.yml
@@ -3,9 +3,9 @@ name: Process and publish unemployment data as a parquet file and a collection o
 on:
   workflow_dispatch:
   # to run manually.
-  schedule:
+  #schedule:
     # update data daily.
-    - cron: "45 12 * * *"
+    #- cron: "45 12 * * *"
   #push:
 env:
   FRED_KEY: ${{secrets.FRED_KEY}}
